--- a/css/default.css
+++ b/css/default.css
@@ -352,3 +352,47 @@ table td > a { color: #395ca3; font-weight: 600; box-shadow: 0 1px 0 0 currentCo
 .woocommerce.rating span {
    color: #395ca3;
 }
+
+
+#slider-carousel .item-small {
+    height: 320px;
+}
+
+
+.slider-caption h2 {
+    color: #ffffff;
+    text-shadow: 0 0px 1px rgba(155, 155, 155, 0.7);
+    padding: 0;
+    letter-spacing: 0px;
+    font-size: 3.438rem;
+    line-height: 1.3;
+    font-weight: 700;
+    margin: 0 0 47px;
+    position: relative;
+}
+
+@media (max-width: 480px) {
+    .slider-caption h2 { font-size: 2.438rem; }
+}
+
+.slider-caption h2:after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 4px;
+    margin-top: 10px;
+    border-radius: 0px;
+    position: absolute;
+}
+.slider-caption.center h2:after {
+    left: 0;
+}
+.slider-caption.center h2:after {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+.slider-caption.right h2:after {
+    right: 0;
+}
